# federated-medical-diagnosis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_fipca_math.py  verify_env.py
.github/workflows/: ci.yml  codeql.yml
data/: dataloader.py  dataset_stats.py  download_dataset.py  partition_data.py  partition_generator.py  test_gpu_batch.py  visualize_samples.py
docs/: data_protection.md  methodology.md  methodology_fixed.md  privacy_guarantee.md  reproducibility.md  sdg_alignment.md
experiments/: baseline_centralized.py  baseline_results.json  config.yaml  run_ablation_wasserstein.py  run_federated.py  run_federated_5clients.py  run_federated_noniid.py  tune_local_epochs.py
experiments/m5_results/: insights.md
federated/: client.py
federated/strategies/: distance_aware_agg.py  fed_avg.py
models/: cnn_backbone.py  full_model.py  lightweight_head.py  test_model.py
results/: loss_trajectory.csv  privacy_utility_tradeoff.csv
scripts/: download_dataset.py  plot_results.py  run_all_experiments.ps1  run_all_experiments.sh
tests/: test_differential_privacy.py  test_fipca.py
training/: train.py
utils/: communication_logger.py  compare_strategies.py  differential_privacy.py  energy_tracker.py  fipca.py  metrics.py  plot_convergence.py  plot_distributions.py
