[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-medical-diagnosis"
version = "1.0.0"
description = "Federated Learning for Privacy-Preserving Medical Diagnostics on PathMNIST"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Soham Kundu", email = "soham@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "torch>=2.0.0",
    "flwr>=1.5.0",
    "numpy>=1.22.0",
    "scikit-learn>=1.0.0",
    "medmnist>=3.0.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
